# OOTPISP-2024

./: README.md
trunk/po0_220224/task_01/src/: recep.cpp
trunk/po0_220224/task_02/: readme.md
trunk/po0_220224/task_03/src/: CMakeLists.txt  Container.cpp  Container.h  bird.cpp
trunk/po0_220224/task_04/: readme.md
trunk/po0_220224/task_04/src/: CMakeLists.txt  Money.cpp  Money.h  Set.h  main.cpp  readme.md
trunk/po0_220224/task_05/src/: CMakeLists.txt  Money.cpp  Money.h  MyMoney.cpp  Vector.h  VectorOnPriorityQueue.h  main.cpp
